create base.html add normalize.css

--- a/templates/base.html
+++ b/templates/base.html
@@ -1,5 +1,8 @@
+<!-- HTML5 -->
 <!DOCTYPE html>
-<html>
+<!-- Default Language english -->
+<html lang="en">
+  <!-- Import static   -->
   {% load static %}
   <head>
     <!-- Required meta tags -->
@@ -26,6 +29,42 @@
       href="{% static 'icon/favicon.svg' %}"
       type="image/x-icon"
     />
+
+    <!-- Bootstrap 5.0 CSS -->
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-+0n0xVW2eSR5OomGNYDnhzAbDsOXxcvSN1TPprVMTNDbiYZCxYbOOl7+AMvyTG2x"
+      crossorigin="anonymous"
+    />
+
+    <!-- Global CSS -->
+    <link
+      rel="stylesheet"
+      href="{% static 'css/normalize.css' %}"
+    />
+    <!-- CSS links -->
+    {% block externalCSS %}{% endblock externalCSS %}
   </head>
-  <body></body>
+  <body>
+    <!-- Body content -->
+    {% block bodyContent %}{% endblock bodyContent %}
+
+    <!-- Bootstrap 5.0 Bundle with Popper -->
+    <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/js/bootstrap.bundle.min.js"
+      integrity="sha384-gtEjrD/SeCtmISkJkNUaaKMoLD0//ElJ19smozuHV6z3Iehds+3Ulb9Bn9Plx0x4"
+      crossorigin="anonymous"
+    ></script>
+
+    <!-- jQuery 3.6 -->
+    <script
+      src="https://code.jquery.com/jquery-3.6.0.min.js"
+      integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4="
+      crossorigin="anonymous"
+    ></script>
+
+    <!-- JS scripts -->
+    {% block externalJS %}{% endblock externalJS %}
+  </body>
 </html>
