--- a/templates/base.html
+++ b/templates/base.html
@@ -41,7 +41,7 @@
     <!-- Global CSS -->
     <link
       rel="stylesheet"
-      href="{% static 'css/normalize.css' %}"
+      href="{% static 'css/base.css' %}"
     />
     <!-- CSS links -->
     {% block externalCSS %}{% endblock externalCSS %}
