--- a/static/css/base.css
+++ b/static/css/base.css
@@ -1,10 +1,41 @@
 * {
-  box-sizing: border-box;
   scroll-behavior: smooth;
 }
 
 *::before,
 *::after {
-  box-sizing: border-box;
   scroll-behavior: smooth;
+}
+
+/* Responsive */
+@media screen and (max-width: 576px) {
+  html {
+    font-size: 16px;
+  }
+}
+
+@media screen and (max-width: 768px) and (min-width: 576px) {
+  html {
+    font-size: 17px;
+  }
+}
+@media screen and (max-width: 992px) and (min-width: 768px) {
+  html {
+    font-size: 18px;
+  }
+}
+@media screen and (max-width: 1200px) and (min-width: 992px) {
+  html {
+    font-size: 19px;
+  }
+}
+@media screen and (max-width: 1400px) and(min-width: 1200px) {
+  html {
+    font-size: 20px;
+  }
+}
+@media screen and (min-width: 1400px) {
+  html {
+    font-size: 22px;
+  }
 }
