--- a/templates/base.html
+++ b/templates/base.html
@@ -26,7 +26,7 @@
     <!-- Site icon -->
     <link
       rel="shortcut icon"
-      href="{% static 'icon/favicon.svg' %}"
+      href="{% static 'img/favicon.svg' %}"
       type="image/x-icon"
     />
 
@@ -49,6 +49,9 @@
   <body>
     <!-- Body content -->
     {% block bodyContent %}{% endblock bodyContent %}
+    <footer>
+      <p>Cover template for</p>
+    </footer>
 
     <!-- Bootstrap 5.0 Bundle with Popper -->
     <script
