--- a/static/css/base.css
+++ b/static/css/base.css
@@ -37,6 +37,11 @@
 }
 @media screen and (min-width: 1400px) {
   html {
+    font-size: 20px;
+  }
+}
+@media screen and (min-width: 1800px) {
+  html {
     font-size: 22px;
   }
 }
