--- a/templates/base.html
+++ b/templates/base.html
@@ -79,6 +79,7 @@
     ></script>
 
     <!-- JS scripts -->
+    <script src="{% static 'js/components/navbar.js' %}"></script>
     {% block externalJS %}{% endblock externalJS %}
   </body>
 </html>
