--- a/static/css/components/navbar.css
+++ b/static/css/components/navbar.css
@@ -8,7 +8,7 @@
   justify-content: space-between;
   align-items: center;
   line-height: 0;
-  overflow: hidden;
+  font: normal 400 1rem/1 Montserrat;
 }
 
 .navbar .navbar-content {
@@ -17,8 +17,8 @@
   display: flex;
   justify-content: space-between;
   align-items: center;
-  font: normal 400 1rem/1 Montserrat;
   color: rgba(198, 204, 249, 1);
+  overflow: hidden;
 }
 
 .navbar-content .navbar-list {
@@ -53,6 +53,85 @@
   color: #fff;
   font-weight: 700;
   cursor: pointer;
+}
+
+.navbar-i18n-btn .current-lang {
+  margin: 0;
+}
+
+.i18n-list {
+  margin: 0;
+  list-style: none;
+  position: fixed;
+  top: 50vh;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  width: 12rem;
+  height: 0;
+  overflow: hidden;
+  padding: 0;
+  border: none;
+  border-radius: 6px;
+  box-shadow: 2px 2px 5px rgba(24, 24, 24, 0.8);
+  background-color: #fff;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+
+.i18n-list-collapsed {
+  height: 12rem;
+  padding: 1.5rem 0 0 0;
+  border: 2px solid #000;
+}
+
+.i18n-list .close-btn {
+  width: 1.5rem;
+  height: 1.5rem;
+  cursor: pointer;
+  position: absolute;
+  top: 0.25rem;
+  right: 0.25rem;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.i18n-list .close-btn .line {
+  margin: 0;
+  width: 100%;
+  height: 0.1rem;
+  border-radius: 10px;
+  background: rgba(61, 61, 61, 1);
+}
+
+.i18n-list .close-btn .line:first-child {
+  transform: rotate(45deg) translate(0.3rem, -0.5rem);
+}
+
+.i18n-list .close-btn .line:last-child {
+  transform: rotate(-45deg) translate(0, -0.2rem);
+}
+
+.i18n-list .list-item {
+  width: 100%;
+  padding: 0.25rem 0;
+  text-align: center;
+  cursor: pointer;
+}
+
+.i18n-list .list-item:hover {
+  color: #fff;
+  background: #000;
+}
+
+.i18n-list .list-item:not(:last-child) {
+  margin-bottom: 1rem;
+}
+
+.i18n-list .list-item-active {
+  font-weight: bold;
 }
 
 @media screen and (max-width: 992px) {
