--- a/templates/main/index.html
+++ b/templates/main/index.html
@@ -14,14 +14,14 @@
   <div class="box-padding welcome-info">
     <div class="mb-5 info-title">
       <p>IT</p>
-      <p>Engineering</p>
+      <p class="i18n" data-i18n-id="engineering">Engineering</p>
     </div>
     <p class="mb-5 info-detail">
       Trafagar provides progressive, and affordable healthcare, accessible on 
       mobile and online for everyone
     </p>
     <div class="info-read-more">
-      <a class="read-more-text">Read More</a>
+      <a class="read-more-text i18n" data-i18n-id="read more">Read More</a>
       <div class="read-more-arrow">
         <img src="{% static 'icon/arrow-right.svg' %}" alt="arrow-right">
       </div>
