--- a/static/css/base.css
+++ b/static/css/base.css
@@ -11,37 +11,43 @@
 /* Responsive */
 @media screen and (max-width: 576px) {
   html {
-    font-size: 16px;
+    font-size: 13.5px;
   }
 }
 
 @media screen and (max-width: 768px) and (min-width: 576px) {
   html {
-    font-size: 17px;
+    font-size: 14px;
   }
 }
 @media screen and (max-width: 992px) and (min-width: 768px) {
   html {
-    font-size: 18px;
+    font-size: 14.5px;
   }
 }
 @media screen and (max-width: 1200px) and (min-width: 992px) {
   html {
-    font-size: 19px;
+    font-size: 15px;
   }
 }
 @media screen and (max-width: 1400px) and(min-width: 1200px) {
   html {
-    font-size: 20px;
+    font-size: 15.5px;
   }
 }
 @media screen and (min-width: 1400px) {
   html {
-    font-size: 20px;
+    font-size: 16px;
   }
 }
 @media screen and (min-width: 1800px) {
   html {
-    font-size: 22px;
+    font-size: 18px;
   }
 }
+@media screen and (min-width: 2100px) {
+  html {
+    font-size: 20px;
+  }
+}
+
